--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,5 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = run:app
+module = stores-rest-api-chris.run:app
 memory-report = true
